After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 583285 - trunc() used, but not checked for
trunc() used, but not checked for
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: general
2.26.x
Other All
: Normal normal
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
: 525844 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-05-19 23:34 UTC by Thomas Klausner
Modified: 2010-01-29 01:29 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26



Description Thomas Klausner 2009-05-19 23:34:05 UTC
In gnome-screensaver-2.26.1, savers/floaters.c uses trunc().
This function doesn't exist on all systems (e.g. DragonFly BSD or older NetBSD releases). The configure script doesn't check for it. Compilation fails.

Configure should check for trunc() and replace it if not found.
On the mentioned systems, trunc() could e.g. get replaced with
#define trunc(x) ((double)floor(x)).
Comment 1 William Jon McCann 2010-01-29 01:22:14 UTC
Thanks.  I think this should do it.  Fixed in 2.28 and master.

commit 6283ea74ff42ba4a459fc16449078ddfe4ece82f
Author: William Jon McCann <jmccann@redhat.com>
Date:   Thu Jan 28 20:19:09 2010 -0500

    Define a trunc macro for systems that don't have one
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=583285
Comment 2 William Jon McCann 2010-01-29 01:29:07 UTC
*** Bug 525844 has been marked as a duplicate of this bug. ***