Define a trunc macro for systems that don't have one

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=583285